clusters/k3s/apps/automation/autobrr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: autobrr
  namespace: docker-services
spec:
  type: ClusterIP
  ports:
  - port: 7474
    targetPort: 7474
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: autobrr
  namespace: docker-services
subsets:
- addresses:
  - ip: 192.168.1.40
  ports:
  - port: 7474
---
