clusters/k3s/apps/automation/autobrr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autobrr
  namespace: docker-services
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - autobrr.erwanleboucher.dev
    secretName: autobrr-tls
  rules:
  - host: autobrr.erwanleboucher.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: autobrr
            port:
              number: 7474
